--- a/Aircraft_families.html
+++ b/Aircraft_families.html
@@ -54,7 +54,7 @@ a:hover,a:active{background-color:#CCFF33;}
 	<hr style="height:10px;border-width:0;color:gray;background-color:darkblue" width="96%" align="center"/>
 	<br>
 	<p><font face="Times New Roman"	size="6" color="000000"><i><b> 
-	Passenger aircrafts are designed for transporting relatively large volumes of 
+	Passenger aircrafts are designed for transporting relatively large volumes of ff
 	passengers for both long and short distances. Their sizes and features are individualized according to the specifics of their task or job.
 	</font></p></i></b>
 	<br>
