--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@ body {
 	<font color="darkblue" face="Times New Roman"	size="40"> <b>Airbus{Introduction}</b> </font> 
 	<p> <font color="000000" face="Times New Roman" size="5">
 	<b>Airbus is a world-renowned European-based aircraft manufacturer. The four main nations which Airbus are based of are France, Germany, Spain and the UK.
-	Airbus has been built on its ability to draw on the best that Europe has to offer and develop innovative products in anticipation of market needs, and now does the same on a global scale. Its headquarters are located in Blagnac, France. It is truly the world‚Äôs hub of providing top quality aircrafts.
+	Airbus has been built on its ability to draw on the best that Europe has to offer and develop innovative products in anticipation of market needs, and now does the same on a global scale. Its headquarters are located in Blagnac, France. It is truly the worldís hub of providing top quality aircrafts.
 	</font></p></b>
 	<p> <font color="000000" face="Times New Roman" size="5">
-	<b>The company was initially established as ‚ÄúAirbus Industrie‚Äù in the 1970s, but had changed to its current official name: Airbus back in 2001.
+	<b>The company was initially established as ìAirbus Industrieî in the 1970s, but had changed to its current official name: Airbus back in 2001.
 	The main reason why this prestigious company has been produced with its American rival, Boeing. Airbus truly is world class in engineering.
 	Their most recent aircraft, the A350XWB has really gone up to a new level in terms of its sleek design .
 	The future is bright for Airbus as an aircraft manufacturer.</b>
